# propagator-bbvi

./: .gitignore  Examples.hs  LICENSE  OldExamples.hs  package.yaml  propagator-bbvi.cabal  readme.org  stack.yaml
app/: Main.hs
doc/: akm2203-fogm-final-project.tex  preamble.tex  references.bib
notes/: performance.org
src/: Lib.hs  Simpler.hs  Test.hs
src/Statistics/: BBVI.hs
src/Statistics/BBVI/: Class.hs  Defaults.hs  Examples.hs  Gradient.hs  Observed.hs  Propagator.hs  Scheduler.hs  StepSize.hs
src/Statistics/BBVI/Distribution/: Dirichlet.hs  Normal.hs
